--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -45,7 +45,7 @@
         android:lines="1"
         android:paddingStart="@dimen/dimens_half"
         android:paddingEnd="@dimen/dimens_half"
-        android:paddingBottom="@dimen/dimens_default"
+        android:paddingBottom="@dimen/dimens_half"
         android:textColor="@color/colorText2"
         android:textSize="@dimen/textSize_item_info"
         app:layout_constraintBottom_toTopOf="@id/itemDescriptionTextView"
@@ -60,6 +60,7 @@
         android:ellipsize="end"
         android:lines="2"
         android:paddingStart="@dimen/dimens_half"
+        android:paddingTop="@dimen/dimens_small"
         android:paddingEnd="@dimen/dimens_half"
         android:paddingBottom="@dimen/dimens_half"
         android:textColor="@color/colorText1"
